[package]
name = "linkerd-cni-repair-controller"
version = "0.1.0"
authors = ["Linkerd Authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
default = ["openssl-tls", "openssl-vendored"]
openssl-tls = ["kube/openssl-tls"]
# Vendor openssl to statically link lib
openssl-vendored = ["openssl/vendored"]
rustls-tls = ["kube/rustls-tls"]

[dependencies]
anyhow = "1"
futures = "0.3"
k8s-openapi = { version = "0.20", features = ["v1_22"] }
kube = { version = "0.87", features = ["runtime"] }
openssl = { version = "0.10.72", optional = true }
prometheus-client = "0.22"
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "help", "std"]

[dependencies.kubert]
version = "0.21"
default-features = false
features = ["admin", "clap", "prometheus-client", "runtime"]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]

[dev-dependencies]
chrono = "0.4"
