[package]
name = "linkerd-cni-repair-controller"
version = "0.1.0"
authors = ["Linkerd Authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["v1_33"] }
kube = { version = "1.1", default-features = false, features = ["runtime", "rustls-tls"] }
prometheus-client = { version = "0.23", default-features = false }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "help", "std"]

[dependencies.kubert]
version = "0.25"
default-features = false
features = ["admin", "clap", "prometheus-client", "runtime", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]

[dev-dependencies]
chrono = "0.4"
