[package]
name = "linkerd-network-validator"
version = "0.1.1"
authors = ["Linkerd Authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
kubert = { version = "0.8", features = ["log"] }
rand = "0.8"
tracing = "0.1"

[dependencies.clap]
version = "3"
default-features = false
features = ["derive", "env", "std"]

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "net", "rt", "signal", "time"]
