[package]
name = "linkerd-network-validator"
version = "0.1.2"
authors = ["Linkerd Authors <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
kubert = { version = "0.19.0", features = ["log"] }
linkerd-reinitialize-pods = { path = "../reinitialize-pods" }
rand = "0.8"
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "std"]

[dependencies.tokio]
version = "1"
features = ["io-util", "macros", "net", "rt", "signal", "time"]
